bonus/scripts/ingress/ingress-gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
spec:
  rules:
    - host: k3d.gitlab.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
